--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -26,35 +26,38 @@
 
     <hr />
 
-    @foreach (var job in ViewBag.searchLobs)
+    @if (ViewBag.jobs != null)
     {
-        <table class="job-listing">
-            <tr>
-                <th>ID:</th>
-                <td>@job.Id</td>
-            </tr>
-            <tr>
-                <th>Name:</th>
-                <td>@job.Name</td>
-            </tr>
-            <tr>
-                <th>Employer:</th>
-                <td>@job.Employer</td>
-            </tr>
-            <tr>
-                <th>Location:</th>
-                <td>@job.Location</td>
-            </tr>
-            <tr>
-                <th>Position Type:</th>
-                <td>@job.PositionType</td>
-            </tr>
-            <tr>
-                <th>Skill:</th>
-                <td>@job.CoreCompetency</td>
-            </tr>
+        @foreach (var job in ViewBag.jobs)
+        {
+            <table>
+                <tr>
+                    <th>ID:</th>
+                    <td>@job.Id</td>
+                </tr>
+                <tr>
+                    <th>Name:</th>
+                    <td>@job.Name</td>
+                </tr>
+                <tr>
+                    <th>Employer:</th>
+                    <td>@job.Employer</td>
+                </tr>
+                <tr>
+                    <th>Location:</th>
+                    <td>@job.Location</td>
+                </tr>
+                <tr>
+                    <th>Position Type:</th>
+                    <td>@job.PositionType</td>
+                </tr>
+                <tr>
+                    <th>Skill:</th>
+                    <td>@job.CoreCompetency</td>
+                </tr>
 
-        </table>
+            </table>
+        }
     }
 
 
